test avec un .env pour indiquer la route api, marche en local

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 SERVER_PORT='3001'
 SERVER_HOST='accords_node_container'
 
+# API_ROUTE='http://localhost:3001'
+
 FRONT_PORT='3000'
 FRONT_HOST='accords_react_container'
 
